# rust-tracer

./: .gitignore  Cargo.toml  README.md  TODO.md  projectile.ppm
examples/: clock.rs  plane.rs  projectile.rs  scene.rs  shadows.rs  silhouette.rs  sphere.rs
src/: camera.rs  canvas.rs  intersections.rs  lib.rs  lights.rs  materials.rs  matrices.rs  patterns.rs  planes.rs  rays.rs  shapes.rs  spheres.rs  transformations.rs  tuples.rs  world.rs
src/examples/: clock.rs  plane.rs  projectile.rs  scene.rs  shadows.rs  silhouette.rs  sphere.rs
src/shapes/: planes.rs  spheres.rs
