[package]
name = "rust-tracer"
version = "0.1.0"
authors = ["Piotr Ackermann <pioacker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "projectile"
path = "src/examples/projectile.rs"
